Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.1.1
-
Windows 7 64 bit
-
05d4cc5d29c2b1f29f976139bf760df7661890fd
Description
- Open a *.pro file for which Creator did not save a configuration yet.
- Import a build of this project using a Qt version/kit which is not configured in Creator.
- Configure the project like this.
- Go to "Tools" -> "Options..." -> "Build & Run" -> "Kits".
A new kit was added representing the Qt version/kit from step 2. This kit does not have a debugger.
Such automatically added kits should have a debugger whenever it's possible to guess one.
Attachments
Issue Links
- resulted in
-
QTCREATORBUG-14150 [REG 3.3 -> 3.4] Crash when opening project
-
- Closed
-
-
QTCREATORBUG-14157 gdb from Path is not being autodetected
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-12186 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
87899,1 | Project Import: Make sure all values are fully set up | master | qt-creator/qt-creator | Status: ABANDONED | +2 | 0 |
88382,2 | Project Import: Make sure all values are fully set up | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |