Project Import: Make sure all values are fully set up

Call setup on all kitinformation that were not explicitly set when
creating a temporary kit while importing an existing build.

Task-number: QTCREATORBUG-12186
Change-Id: I655ecef10122a96d81e5ed222e80fbffcbb51e17
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>